--- a/style.css
+++ b/style.css
@@ -25,3 +25,14 @@ pre code {
 .center {
   text-align: center;
 }
+.infobox {
+  padding: 1em 1em 1em 4em;
+  margin-bottom: 10px;
+  border: 2px solid orange;
+  border-radius: 10px;
+  background: #f5f5f5 5px center/3em no-repeat;
+}
+
+.info {
+  background-image: url("icons/info-circle-solid.svg");
+}
